crates/next-custom-transforms/tests/errors/react-server-components/server-graph/generate-metadata/input.js
// generateMetadata without metadata is ok.
export function generateMetadata() {}

export default function () {
  return null
}
